--- a/capstone_project_module_2.ipynb
+++ b/capstone_project_module_2.ipynb
@@ -2268,7 +2268,7 @@
    "source": [
     "jika dilihat dari data di atas bsa di tarik kesimpulan terjadi peningkatan sales pada bulan September, November, dan Desember disebabkan ada ny lonjakan transaksi penjualan yang dilakukan oleh customer pada bulan tersebut.\n",
     "\n",
-    "agar lbih yakin sama asumsi kita, sekarang mari kita cek, apakah lonjakan penjualan pada bulan Agustus, Oktober, November, dan Desember disebabkan oleh transaksi penjualan yang lbih besar di bandingkan bulan lainnya. kita akan menggunakan uji statistik **t-test** untuk melihat apakah rata-rata penjualan pada bulan Agustus, Oktober, dan November berbeda secara signifikan dari bulan lainnya."
+    "agar lbih yakin sama asumsi kita, sekarang mari kita cek, apakah lonjakan penjualan pada bulan September, November, dan Desember disebabkan oleh transaksi penjualan yang lbih besar di bandingkan bulan lainnya. kita akan menggunakan uji statistik **t-test** untuk melihat apakah rata-rata penjualan pada bulan Agustus, Oktober, dan November berbeda secara signifikan dari bulan lainnya."
    ]
   },
   {
@@ -2291,17 +2291,17 @@
     "transaction_trends = df.groupby(['Year', 'Month'])['Order ID'].nunique().reset_index()\n",
     "transaction_trends = transaction_trends.rename(columns={'Order ID': 'Transaction Count'})\n",
     "\n",
-    "# Fokus pada bulan Agustus, Oktober, November, dan Desember di seluruh tahun untuk melihat apakah bulan-bulan ini juga menunjukkan jumlah transaksi yang lebih tinggi.\n",
-    "# Filter data untuk Agustus, Oktober, November, dan Desember\n",
+    "# Fokus pada bulan September, November, dan Desember di seluruh tahun untuk melihat apakah bulan-bulan ini juga menunjukkan jumlah transaksi yang lebih tinggi.\n",
+    "# Filter data untuk September, November, dan Desember\n",
     "selected_month_transactions = transaction_trends[transaction_trends['Month'].isin([9, 11, 12])]\n",
     "# Filter data untuk bulan lainnya\n",
     "other_month_transactions = transaction_trends[~transaction_trends['Month'].isin([8, 11, 12])]\n",
     "\n",
-    "# Hitung rata-rata jumlah transaksi untuk Agustus, Oktober, November, dan Desember\n",
+    "# Hitung rata-rata jumlah transaksi untuk September, November, dan Desember\n",
     "selected_month_avg = selected_month_transactions['Transaction Count'].mean()\n",
     "other_months_avg = other_month_transactions['Transaction Count'].mean()\n",
     "\n",
-    "# Tampilkan rata-rata jumlah transaksi untuk Agustus, Oktober, November dan Desember dibandingkan dengan bulan lainnya\n",
+    "# Tampilkan rata-rata jumlah transaksi untuk September, November dan Desember dibandingkan dengan bulan lainnya\n",
     "selected_month_avg, other_months_avg"
    ]
   },
@@ -2346,14 +2346,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "dengan menggunakan uji ttest untuk melihat apakah rata-rata penjualan pada bulan Agustus, Oktober, dan November berbeda secara signifikan dari bulan lainnya, kita mendapatkan nilai p-value sebesar 0.0, yang berarti kita memiliki cukup bukti untuk menolak hipotesis nol (𝐻0) dan menyimpulkan bahwa rata-rata penjualan pada bulan Agustus, Oktober, November, dan Desember berbeda secara signifikan dari bulan lainnya."
+    "dengan menggunakan uji ttest untuk melihat apakah rata-rata penjualan pada bulan Agustus, Oktober, dan November berbeda secara signifikan dari bulan lainnya, kita mendapatkan nilai p-value sebesar 0.0, yang berarti kita memiliki cukup bukti untuk menolak hipotesis nol (𝐻0) dan menyimpulkan bahwa rata-rata penjualan pada bulan September, November, dan Desember berbeda secara signifikan dari bulan lainnya."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lonjakan sales di akhir tahun terjadi karena adanya peningkatan jumlah transaksi yang signifikan di bulan Agustus, Oktober, November, dan Desember dibandingkan bulan-bulan lainnya. Hal ini menunjukkan adanya pola musiman yang mendorong aktivitas pembelian yang lebih tinggi pada periode akhir tahun"
+    "Lonjakan sales di akhir tahun terjadi karena adanya peningkatan jumlah transaksi yang signifikan di bulan September, November, dan Desember dibandingkan bulan-bulan lainnya. Hal ini menunjukkan adanya pola musiman yang mendorong aktivitas pembelian yang lebih tinggi pada periode akhir tahun"
    ]
   },
   {
@@ -2805,7 +2805,7 @@
     "# Urutkan produk berdasarkan profit tertinggi\n",
     "top_profit = product_popularity_sorted.sort_values('Profit',ascending=False)\n",
     "sns.barplot(data=top_profit, x='Profit', y='Product', palette='Oranges_d')\n",
-    "plt.title('Top 5 Produk Berdasarkan Total Profit')\n",
+    "plt.title('Produk Berdasarkan Total Profit')\n",
     "plt.xlabel('Total Profit')\n",
     "plt.ylabel('Produk')"
    ]
